    prefixes. (tucu)

    HADOOP-10755. Support negative caching of user-group mapping.
    (Lei Xu via wang)

    HADOOP-10855. Allow Text to be read with a known Length. (todd)

    HADOOP-10887. Add XAttrs to ViewFs and make XAttrs + ViewFileSystem
    internal dir behavior consistent. (Stephen Chu via wang)

    HADOOP-10882. Move DirectBufferPool into common util. (todd)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-10781. Unportable getgrouplist() usage breaks FreeBSD (Dmitry
    Sivachenko via Colin Patrick McCabe)

    HADOOP-10507. FsShell setfacl can throw ArrayIndexOutOfBoundsException when
    no perm is specified. (Stephen Chu and Sathish Gurram via cnauroth)

    HADOOP-10780. hadoop_user_info_alloc fails on FreeBSD due to incorrect
    sysconf use (Dmitry Sivachenko via Colin Patrick McCabe)

    HADOOP-10810. Clean up native code compilation warnings. (cnauroth)

    HADOOP-9921. daemon scripts should remove pid file on stop call after stop
    or process is found not running ( vinayakumarb )

    HADOOP-10591.  Compression codecs must used pooled direct buffers or
    deallocate direct buffers when stream is closed (cmccabe)

    HADOOP-10857.  Native Libraries Guide doen't mention a dependency on
    openssl-development package (ozawa via cmccabe)

    HADOOP-10866. RawLocalFileSystem fails to read symlink targets via the stat
    command when the format of the stat command uses non-curly quotes (yzhang
    via cmccabe)

    HADOOP-10830. Missing lock in JavaKeyStoreProvider.createCredentialEntry.
    (Benoy Antony via umamahesh)

    HADOOP-10876. The constructor of Path should not take an empty URL as a
    parameter. (Zhihai Xu via wang)

Release 2.5.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-10498. Add support for proxy server. (daryn)

    HADOOP-9704. Write metrics sink plugin for Hadoop/Graphite (Chu Tong, Alex Newman and Babak Behzad via raviprak)
